--- a/PR084-VolleyImagenesCache/app/src/main/res/layout/activity_main.xml
+++ b/PR084-VolleyImagenesCache/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
-<es.iessaladillo.pedrojoya.pr084.EndlessGridView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swlPanel"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lstFotos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:columnWidth="@dimen/ancho_foto"
-    android:gravity="center"
-    android:horizontalSpacing="10dp"
-    android:numColumns="auto_fit"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="15dp"
-    tools:context=".MainActivity" />
+    tools:context="es.iessaladillo.pedrojoya.pr092.MainFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lstFotos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</android.support.v4.widget.SwipeRefreshLayout>
