--- a/PR139-InstagramRetrofit/app/src/main/res/layout/activity_main_item.xml
+++ b/PR139-InstagramRetrofit/app/src/main/res/layout/activity_main_item.xml
@@ -5,7 +5,7 @@
              android:layout_height="match_parent"
              android:minHeight="@dimen/ancho_foto">
 
-    <com.android.volley.toolbox.NetworkImageView
+    <ImageView
         android:id="@+id/imgFoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
