--- a/PR140-RetrofitXML/app/src/main/res/layout/appbar_filter_list.xml
+++ b/PR140-RetrofitXML/app/src/main/res/layout/appbar_filter_list.xml
@@ -4,4 +4,5 @@
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:background="@color/background_material_light"
+          android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
           android:textColor="@color/primary_text_default_material_light" />
