--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/toolbar.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/toolbar.xml
@@ -9,7 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary"
     android:paddingTop="@dimen/statusBarPaddingTop"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
     app:theme="@style/ToolbarTheme">
