--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/styles.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/styles.xml
@@ -3,19 +3,21 @@
     <!-- Tema base de la aplicación. Debe heredar de Theme.AppCompat -->
     <style name="AppThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Color de la ActionBar -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/primary</item>
         <!-- Color de la barra de notificaciones -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <!-- Color de acento (contraste) -->
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/accent</item>
+        <!-- Color selección -->
+        <item name="colorControlHighlight">@color/primary_light</item>
     </style>
 
     <!-- Tema para la Toolbar. Debe heredar de ThemeOverlay.AppCompat  -->
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark">
         <!-- Color principal del texto -->
-        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
         <!-- Color secundario de texto (icono de navegación y overflow) -->
-        <item name="android:textColorSecondary">@color/textColorSecundary</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
 
     <style name="AppTheme" parent="AppThemeBase">
