--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_main.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_main.xml
@@ -1,23 +1,39 @@
-<FrameLayout
-    android:id="@+id/main_content"
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nsvScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="pedrojoya.iessaladillo.es.pr105.MainFragment">
+        >
 
         <TextView
             android:id="@+id/lblTexto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/lorem"/>
+            android:text="@string/lorem"
+            />
 
     </android.support.v4.widget.NestedScrollView>
 
@@ -25,9 +41,10 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_anchor="@id/main_content"
-        app:layout_anchorGravity="bottom|right|end"
-        android:src="@drawable/ic_done"/>
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_done" />
 
-</FrameLayout>
+
+</android.support.design.widget.CoordinatorLayout>
