PR105 Add HideShowScrollListener

--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_nestedscrollview.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_nestedscrollview.xml
@@ -25,20 +25,18 @@
         android:id="@+id/nsvScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/lblTexto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/lorem"
-            />
+            android:text="@string/lorem"/>
 
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabAccion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
