--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,10 @@
     tools:context=".MainActivity">
 
     <!-- Contenido principal. Debe ser el primer hijo y ocupar el padre al completo -->
-
-        <FrameLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
     <!-- Vista de navegación. Debe ser el segundo hijo.
