--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="navigation_drawer_header_height">178dp</dimen>
     <dimen name="navigation_drawer_header_textBox_height">56dp</dimen>
     <dimen name="navigation_drawer_header_marginBottom">8dp</dimen>
+    <dimen name="fab_translationY">72dp</dimen>
 
 </resources>
