--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
@@ -23,7 +23,9 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="scrollable"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -38,7 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_done"/>
 
 </android.support.design.widget.CoordinatorLayout>
