--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
@@ -13,4 +13,23 @@
     <dimen name="navigation_drawer_header_marginBottom">8dp</dimen>
     <dimen name="fab_translationY">72dp</dimen>
 
+    <!-- RecyclerView -->
+    <dimen name="list_paddingTop">8dp</dimen>
+    <dimen name="list_paddingBottom">8dp</dimen>
+
+    <!-- Single line with avatar list item -->
+    <dimen name="two_line_tile_height">72dp</dimen>
+    <dimen name="two_line_avatar_width">40dp</dimen>
+    <dimen name="two_line_avatar_height">40dp</dimen>
+    <dimen name="two_line_avatar_marginTop">20dp</dimen>
+    <dimen name="two_line_avatar_marginLeft">16dp</dimen>
+    <dimen name="two_line_text_paddingTop">18dp</dimen>
+    <dimen name="two_line_secundary_text_paddingBottom">20dp</dimen>
+    <dimen name="two_line_text_paddingLeft">72dp</dimen>
+    <dimen name="two_line_text_marginRight">16dp</dimen>
+    <dimen name="two_line_secundary_icon_width">32dp</dimen>
+    <dimen name="two_line_secundary_icon_height">32dp</dimen>
+    <dimen name="two_line_secundary_icon_marginRight">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
 </resources>
