--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/navigation_drawer_header.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background_poly"
     android:paddingLeft="@dimen/navigation_drawer_paddingLeft"
     android:paddingRight="@dimen/navigation_drawer_paddingRight"
-    android:paddingTop="@dimen/statusBarPaddingTop">
+    android:paddingTop="@dimen/statusBarHeight">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_drawer_header_textBox_height"
