--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/toolbar.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/toolbar.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary"
-    android:paddingTop="@dimen/statusBarPaddingTop"
+    android:paddingTop="@dimen/statusBarHeight"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
     app:theme="@style/ToolbarTheme">
 
