--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
     <dimen name="navigation_drawer_width">240dp</dimen>
-    <dimen name="statusBarPaddingTop">0dp</dimen>
     <dimen name="navigation_drawer_paddingLeft">16dp</dimen>
     <dimen name="navigation_drawer_paddingRight">16dp</dimen>
     <dimen name="navigation_drawer_header_height">178dp</dimen>
     <dimen name="navigation_drawer_header_textBox_height">56dp</dimen>
     <dimen name="navigation_drawer_header_marginBottom">8dp</dimen>
-    <dimen name="fab_translationY">72dp</dimen>
+    <dimen name="navigation_drawer_header_profile_marginTop">16dp</dimen>
+
+    <!-- Fake Status Bar -->
+    <dimen name="statusBarHeight">0dp</dimen>
 
     <!-- RecyclerView -->
     <dimen name="list_paddingTop">8dp</dimen>
@@ -30,6 +33,8 @@
     <dimen name="two_line_secundary_icon_width">32dp</dimen>
     <dimen name="two_line_secundary_icon_height">32dp</dimen>
     <dimen name="two_line_secundary_icon_marginRight">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+
+    <!-- FAB -->
+    <dimen name="fab_margin">0dp</dimen>
 
 </resources>
