--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/styles.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="colorAccent">@color/accent</item>
         <!-- Color selección -->
         <item name="colorControlHighlight">@color/primary_light</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
     <!-- Tema para la Toolbar. Debe heredar de ThemeOverlay.AppCompat  -->
@@ -20,8 +21,11 @@
         <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
 
-    <style name="AppTheme" parent="AppThemeBase">
+    <style name="NavigationViewTheme" parent="AppThemeBase">
+        <item name="textAppearanceListItem">@style/TextAppearance.AppCompat.Body2</item>
+    </style>
 
+    <style name="AppTheme" parent="AppThemeBase">
     </style>
 
 </resources>
