--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main_drawer_header.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main_drawer_header.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_vertical"
-            android:text="Pedro Joya"
+            android:text="@string/autor"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <TextView
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_vertical"
-            android:text="pedro.joya@iessaladillo.es"
+            android:text="@string/email"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     </LinearLayout>
