--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
@@ -53,6 +53,7 @@
             android:layout_gravity="end|bottom"
             android:layout_marginBottom="@dimen/fab_margin"
             android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
             android:src="@drawable/ic_done"/>
 
     </android.support.design.widget.CoordinatorLayout>
