--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
@@ -5,20 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="@bool/fitsSystemWindows">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:fitsSystemWindows="true"
+        android:layout_height="@dimen/parallaxAppBarHeight"
+        android:fitsSystemWindows="@bool/fitsSystemWindows"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
+            android:fitsSystemWindows="@bool/fitsSystemWindows"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="16dp"
             app:expandedTitleMarginStart="48dp"
@@ -28,7 +28,8 @@
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
+                android:contentDescription="@string/imagen_cabecera"
+                android:fitsSystemWindows="@bool/fitsSystemWindows"
                 android:scaleType="centerCrop"
                 android:src="@drawable/background_poly"
                 app:layout_collapseMode="parallax"/>
@@ -36,10 +37,12 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:fitsSystemWindows="false"
+                android:layout_height="@dimen/collapsingtoolbarHeight"
+                android:paddingTop="@dimen/statusBarHeight"
+                android:fitsSystemWindows="@bool/fitsSystemWindows"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -47,14 +50,13 @@
         android:id="@+id/nsvScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dip"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dip"
+            android:padding="10dp"
             android:text="@string/lorem"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/primary_text"/>
