--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_collapsingtoolbarlayout.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_collapsingtoolbarlayout.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/extendedappbarHeight"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
