--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_nestedscrollview.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_nestedscrollview.xml
@@ -55,6 +55,7 @@
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="@dimen/fab_margin"
             android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
             android:src="@drawable/ic_done"/>
 
     </android.support.design.widget.CoordinatorLayout>
