--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values-v19/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values-v19/dimens.xml
@@ -6,7 +6,7 @@
 
     <!-- Fake StatusBar -->
     <dimen name="statusBarHeight">25dp</dimen>
-
+    <dimen name="collapsingtoolbarHeight">81dp</dimen>
 
 
 </resources>
