--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <!-- Navigation drawer -->
     <dimen name="navigation_drawer_paddingLeft">16dp</dimen>
     <dimen name="navigation_drawer_paddingRight">16dp</dimen>
     <dimen name="navigation_drawer_header_height">178dp</dimen>
@@ -15,6 +11,7 @@
 
     <!-- Fake Status Bar -->
     <dimen name="statusBarHeight">0dp</dimen>
+    <dimen name="collapsingtoolbarHeight">@dimen/abc_action_bar_default_height_material</dimen>
 
     <!-- RecyclerView -->
     <dimen name="list_paddingTop">8dp</dimen>
@@ -36,5 +33,10 @@
 
     <!-- FAB -->
     <dimen name="fab_margin">0dp</dimen>
+
+    <!-- Collapsing Toolbar -->
+    <dimen name="extendedappbarHeight">128dp</dimen>
+    <dimen name="parallaxAppBarHeight">200dp</dimen>
+    <dimen name="fragment_tab2_padding">10dp</dimen>
 
 </resources>
