--- a/PR107-RecyclerViewAddOns/app/src/main/res/values/dimens.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <resources>
+
     <!-- Empty View -->
     <dimen name="empty_drawablePadding">10dp</dimen>
-    <!-- Toolbar -->
-    <dimen name="toolbar_height">56dp</dimen>
-    <dimen name="toolbar_elevation">4dp</dimen>
+
+    <!-- RecyclerView -->
+    <dimen name="lst_padding">8dp</dimen>
+
     <!-- Single line with avatar list item -->
     <dimen name="two_line_tile_height">72dp</dimen>
     <dimen name="two_line_avatar_width">40dp</dimen>
@@ -15,5 +17,10 @@
     <dimen name="two_line_text_paddingLeft">72dp</dimen>
     <dimen name="two_line_text_marginRight">16dp</dimen>
 
+    <!-- Fake StatusBar -->
+    <dimen name="statusBarHeight">0dp</dimen>
+    
+    <!-- FAB -->
+    <dimen name="fab_margin">0dp</dimen>
 
 </resources>
