--- a/PR107-RecyclerViewAddOns/app/src/main/res/values/styles.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Tema base de la aplicación -->
+    <style name="AppThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Color de la ActionBar -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <!-- Color de la barra de notificaciones -->
@@ -10,24 +10,16 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!-- Necesario para mostrar modo contextual sobre toolbar -->
         <item name="windowActionModeOverlay">true</item>
-        <!-- Modo de acción contextual -->
-        <item name="actionModeStyle">@style/ActionModeStyle</item>
+        <item name="actionModeBackground">@color/actionModeBackground</item>
         <item name="actionMenuTextColor">@color/actionMenuTextColor</item>
-        <item name="actionModeCloseDrawable">@drawable/ic_action_arrow_back</item>
         <!-- Fondo para elementos activados -->
         <item name="selectableItemBackground">@drawable/activity_main_item_background</item>
         <item name="android:selectableItemBackground">@drawable/activity_main_item_background</item>
     </style>
 
-    <!-- Estilos para el modo de acción contextual -->
-    <style name="ActionModeStyle" parent="@style/Widget.AppCompat.ActionMode">
-        <item name="background">@color/actionModeBackground</item>
-        <item name="titleTextStyle">@style/ActionModeTitleStyle</item>
+    <!-- Tema de la aplicación -->
+    <style name="AppTheme" parent="AppThemeBase">
 
-    </style>
-    <style name="ActionModeTitleStyle">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">@dimen/abc_text_size_title_material_toolbar</item>
     </style>
 
 </resources>
