--- a/PR106-RecyclerView/app/src/main/res/values/styles.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/styles.xml
@@ -1,24 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
 
     <!-- Tema de la aplicación. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="AppThemeBase">
 
-    </style>
-
-    <!-- Estilo para el FAB -->
-    <style name="FabStyle">
-        <item name="android:layout_width">?attr/actionBarSize</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">@drawable/fab_background</item>
-        <item name="android:scaleType">center</item>
-        <item name="android:src">@drawable/ic_plus</item>
     </style>
 
 </resources>
