--- a/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,69 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/lstAlumnos"
+    <!-- StatusBar falsa para Kit-Kat -->
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="8dp"
-        android:paddingTop="?attr/actionBarSize"
-        android:fadeScrollbars="false"
-        android:clipToPadding="false" />
+        android:layout_height="@dimen/statusBarHeight"
+        android:background="@color/colorPrimaryDark"/>
 
-    <include layout="@layout/toolbar" />
-
-    <TextView
-        android:id="@+id/lblNoHayAlumnos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawablePadding="@dimen/empty_drawablePadding"
-        android:drawableTop="@drawable/ic_no_hay_alumnos"
-        android:text="@string/no_hay_alumnos"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <!-- Para el drag & drop -->
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/overlay"
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/lstAlumnos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/lst_padding"
+            android:paddingBottom="@dimen/lst_padding"
+            android:fadeScrollbars="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        <TextView
+            android:id="@+id/lblNoHayAlumnos"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </FrameLayout>
-    <!-- Fin para el drag & drop -->
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawablePadding="@dimen/empty_drawablePadding"
+            android:drawableTop="@drawable/ic_no_hay_alumnos"
+            android:text="@string/no_hay_alumnos"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <com.software.shell.fab.ActionButton
-        android:id="@+id/btnAgregar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/fab_material_pink_500"
-        fab:button_colorPressed="@color/fab_material_pink_900"
-        fab:image="@drawable/fab_plus_icon"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabAccion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
+            android:src="@drawable/ic_action_add"/>
 
-</FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
-
-
+</LinearLayout>
