--- a/PR107-RecyclerViewAddOns/app/src/main/res/values/styles.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/values/styles.xml
@@ -10,8 +10,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!-- Necesario para mostrar modo contextual sobre toolbar -->
         <item name="windowActionModeOverlay">true</item>
-        <item name="actionModeBackground">@color/actionModeBackground</item>
-        <item name="actionMenuTextColor">@color/actionMenuTextColor</item>
+        <item name="actionModeBackground">@drawable/cab_background</item>
         <!-- Fondo para elementos activados -->
         <item name="selectableItemBackground">@drawable/activity_main_item_background</item>
         <item name="android:selectableItemBackground">@drawable/activity_main_item_background</item>
