--- a/PR104-Toolbar/app/src/main/res/layout/activity_secundary.xml
+++ b/PR104-Toolbar/app/src/main/res/layout/activity_secundary.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     tools:context=".SecundaryActivity">
 
+    <!-- StatusBar falsa para Kit Kat-->
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/statusBarHeight"
@@ -22,7 +23,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/actividad_secundaria" />
+            android:text="@string/actividad_secundaria"
+            android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 
