--- a/PR104-Toolbar/app/src/main/res/values/colors.xml
+++ b/PR104-Toolbar/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Color pirmario para la Toolbar (Action Bar)-->
+    <!-- Color primario para la Toolbar (Action Bar)-->
     <color name="colorPrimary">#3F51B5</color>
-    <!-- Color para la barra de notificaciones -->
+    <!-- Color para la status bar. -->
     <color name="colorPrimaryDark">#303F9F</color>
-    <!-- Color de acento (contraste) complementario -->
+    <!-- Color de acento (contraste) -->
     <color name="colorAccent">#E91E63</color>
     <color name="textColorPrimary">#E8EAF6</color>
     <color name="textColorSecundary">#FCE4EC</color>
